# grove

./: .dockerignore  .gitignore  .goreleaser.yml  .grove.toml  .mcp.json  CHANGELOG.md  CLAUDE.md  Justfile  LICENSE  README.md  SPEC.md  TODO.md  go.mod  go.sum  main.go  pyproject.toml  release_notes.md
.claude/commands/: release.md
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  release-go.yml  release.yml
bench/: run.sh
cmd/: addrepo.go  bug_report.go  bug_report_test.go  claude_hook.go  create.go  create_test.go  delete.go  dirs.go  doctor.go  explore.go  go_cmd.go  hook.go  init_cmd.go  list.go  mcp.go  plugin.go  preset.go  root.go  root_test.go  run.go  shellinit.go  sync_cmd.go  wizard.go
docs/: ai-tools.md  dashboard.md  hooks.md  plugin-extraction.md  plugins.md
e2e/: Dockerfile  mcp_smoke.py  run.sh
go/: .goreleaser.yml  SPEC.md  go.mod  go.sum
go/Formula/: grove-go.rb
go/cmd/: addrepo.go  completions.go  create.go  delete.go  dirs.go  doctor.go  go_cmd.go  hook.go  list.go  plugin.go  preset.go  removerepo.go  rename.go  root.go  shellinit.go  stats_cmd.go  status.go  sync_cmd.go
go/e2e/: run.sh
grove-go/: .goreleaser.yml  README.md  go.mod  go.sum  justfile
internal/claude/: claude_test.go
internal/config/: config.go
internal/console/: table.go
internal/discover/: deepdiscover.go  deepdiscover_test.go  discover.go  discover_test.go  explore.go  walk.go
internal/gitops/: gitops.go  gitops_test.go
internal/hook/: hook.go  hook_test.go  installer.go  installer_test.go
internal/lifecycle/: lifecycle.go  (+1 more)
scripts/: generate_formula.py  release-notes.sh
shell/: grove.nu  grove.sh
specs/: binary-build.md  dash-kanban.md  dashboard-todo.md
tests/: conftest.py  test_claude.py  test_cli.py  test_config.py  test_dash_hook.py  test_dash_installer.py  test_dash_models.py  test_dash_store.py  test_discover.py  test_git.py  test_mcp_config.py  test_mcp_server.py  test_mcp_store.py  test_models.py  test_state.py  test_stats.py  test_tui.py  test_workspace.py
(+119 files in other folders)
