[project]
name = "grove"
version = "0.4.3"
description = "Git Worktree Workspace Orchestrator"
readme = "README.md"
authors = [
    { name = "Nick Song", email = "nick.song@footway.com" }
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "simple-term-menu>=1.6.6",
]

[project.scripts]
gw = "grove.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.11",
    "ty>=0.0.1a6",
    "pytest>=8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
